# arg_init

./: 404.html  changelog.md  index.html  mkdocs.yml  pyproject.toml  readme.md
.github/workflows/: badge.yml  build.yml  docs.yml  github.yml  lint.yml  main.yml  mypy.yml  publish.yml  pypi.yml  release.yml  ruff.yml  test.yml  workflow.yml
changelog/: index.html
docs/: changelog.md  license.md  reference.md  usage.md
license/: index.html
reference/: index.html
search/: search_index.json
src/arg_init/: __init__.py  _aliases.py  _arg.py  _arg_defaults.py  _arg_factory.py  _arg_init.py  _class_arg_init.py  _config.py  _enums.py  _exceptions.py  _function_arg_init.py  _priority.py  _values.py  _version.py  arg.py  arg_factory.py  arg_init.py  args.py  class_arg_init.py  function_arg_init.py  named_args.py  version.py
tests/: environ.py  test_arg_defaults.py  test_arg_factory.py  test_arg_init_arg_priority.py  test_arg_init_env_priority.py  test_arg_priority.py  test_args_attributes.py  test_arguments.py  test_class_arg_init.py  test_class_init.py  test_edge_conditions.py  test_env_priority.py  test_env_variants.py  test_file_configs.py  test_function_arg_init.py  test_kwargs.py  test_print.py  test_priorities.py  test_update_arg.py  test_version.py
usage/: index.html
