[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "arg_init"
authors = [
    {name = "srfoster65", email = "135555068+srfoster65@users.noreply.github.com"},
]
description = "Resolve argument values from arg, env or default values"
keywords = ["argparse", "init", "environment"]
readme = "readme.md"
requires-python =">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    # "pyyaml>=6.0.1",
    "python-box>=7.0.1",
]
license = {text = "MIT"}
dynamic = ["version"]

[tool.pdm.version]
source = "file"
path = "src/arg_init/version.py"

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.9.1",
]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.3",
    "pymdown-extensions>=10.3",
]

[tool.pylint.basic]
good-names = [
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."massages-control"]
disable = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "version.py",
]
